// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Increase
  </button>
</div>
`;

exports[`ProductCard Should render the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card Test
  </h1>
</div>
`;
